javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.5.DOUBLE_DECLARATION.javali
// Rule 2.2.5: All classes have unique names.

class Main {
	void main() {
		int i;
	}
}

class A {
	void swap() {
		int j;
	}
}

class A {
	void snoop() {
		int j;
	}
}


